[tool.poetry]
name = "music-news-finder"
version = "0.1.0"
description = "Search for relevant music news based on keyword using Exa Search API"
authors = ["Arun Shekar <shekar.arun@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
exa-py = "^1.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
